// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<Controls />\` renders correctly when there are multiple existing similarities. 1`] = `
<div>
  <div
    class="sc-fzplWN kpCZuf"
  >
    <div
      class="sc-fznyAO bnfNPk"
    >
      <button
        class="sc-AxjAm sc-AxirZ CUWHb"
      >
        Add
      </button>
    </div>
    <div
      class="sc-fznKkj hPIjRB"
    >
      <div
        class="sc-fzoLsD bJKKBt"
      >
        <div>
          <button
            class="sc-AxjAm sc-AxiKw cgflug"
          >
            Remove
          </button>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/a-angle"
            >
              Angle
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/a-angle"
              max="6.2832"
              min="-6.2832"
              step="0.0001"
              type="range"
              value="0.1385"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/a-angle"
              >
                0.04π
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                rad
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              -2.00π
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              2.00π
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/a-scale"
            >
              Scale
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/a-scale"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.7791"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/a-scale"
              >
                0.78
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0.00
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/a-translation"
            >
              Translation
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/a-translation"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.4663"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/a-translation"
              >
                0.47
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0.00
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/a-depth"
            >
              Depth
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/a-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="3"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/a-depth"
              >
                3
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              8
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLsD bJKKBt"
      >
        <div>
          <button
            class="sc-AxjAm sc-AxiKw cgflug"
          >
            Remove
          </button>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/b-angle"
            >
              Angle
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/b-angle"
              max="6.2832"
              min="-6.2832"
              step="0.0001"
              type="range"
              value="0.4692"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/b-angle"
              >
                0.15π
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                rad
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              -2.00π
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              2.00π
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/b-scale"
            >
              Scale
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/b-scale"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.7202"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/b-scale"
              >
                0.72
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0.00
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/b-translation"
            >
              Translation
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/b-translation"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.7432"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/b-translation"
              >
                0.74
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0.00
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/b-depth"
            >
              Depth
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/b-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="7"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/b-depth"
              >
                7
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              8
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there are no existing similarities 1`] = `
<div>
  <div
    class="sc-fzplWN kpCZuf"
  >
    <div
      class="sc-fznyAO bnfNPk"
    >
      <button
        class="sc-AxjAm sc-AxirZ CUWHb"
      >
        Add
      </button>
    </div>
    <div
      class="sc-fznKkj hPIjRB"
    />
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there is one existing similarity 1`] = `
<div>
  <div
    class="sc-fzplWN kpCZuf"
  >
    <div
      class="sc-fznyAO bnfNPk"
    >
      <button
        class="sc-AxjAm sc-AxirZ CUWHb"
      >
        Add
      </button>
    </div>
    <div
      class="sc-fznKkj hPIjRB"
    >
      <div
        class="sc-fzoLsD bJKKBt"
      >
        <div>
          <button
            class="sc-AxjAm sc-AxiKw cgflug"
          >
            Remove
          </button>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/subject-angle"
            >
              Angle
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/subject-angle"
              max="6.2832"
              min="-6.2832"
              step="0.0001"
              type="range"
              value="0.1385"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/subject-angle"
              >
                0.04π
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                rad
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              -2.00π
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              2.00π
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/subject-scale"
            >
              Scale
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/subject-scale"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.7791"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/subject-scale"
              >
                0.78
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0.00
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/subject-translation"
            >
              Translation
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/subject-translation"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.4663"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/subject-translation"
              >
                0.47
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0.00
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="sc-fzpans hxQbVO"
        >
          <div
            class="sc-AxhCb gbgBvC"
          >
            <label
              class="sc-AxhUy ePSZTz"
              for="test/subject-depth"
            >
              Depth
            </label>
            <input
              class="sc-AxgMl hqMHJU"
              id="test/subject-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="3"
            />
            <span
              class="sc-AxheI lmOGRG"
            >
              <output
                for="test/subject-depth"
              >
                3
              </output>
              <span
                class="sc-fzozJi jLbZQD"
              >
                 
                x
              </span>
            </span>
            <span
              class="sc-Axmtr gIjoPA"
            >
              0
            </span>
            <span
              class="sc-AxmLO gXCUna"
            >
              8
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
